aquaphor/store/static/css/base.css
body {
  background: #f6f6f6;
}

.header__logo {
  padding: 4px 30px 0 0;
}

.card {
  border-color: transparent;
}

.card-footer {
  background: transparent;
  border-color: transparent;
}

.product_title {
  font-size: 30px;
  text-transform: uppercase;
  letter-spacing: .2em;
  padding-top: 15px;
  padding-bottom: 10px;
}

.product_text {
  padding-right: 20px;
}
.no_decor{
  text-decoration: none!important;
}


.btn_blue {
  background-color: #0049bc;
}

.product_description {
  font-size: 16px;
  text-transform: uppercase;
  letter-spacing: .2em;
}

.errorlist li {
  color: red;
  font-weight: bold;
}

.custom_div {
  margin-bottom: 20px !important;
}

.categories-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 100px 15px;
  background-color: #f1f6ff;
}

.categories-section__flex {
  margin: 50px auto 0;
  display: flex;
  justify-content: space-between;
}

.categories-section__item {
  width: 304px;
  margin: 0 19px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.categories-section img {
  width: 100px;
  height: 100px;
  border-radius: 50%;
}

.categories-section__item p {
  color: #2b1b35;
  padding-top: 20px;
  text-align: center;
  font-size: 21px;
  font-weight: 700;
  line-height: 1.33;
}

a.categories-section__item:hover p {
  color: #0049bc !important;
}

a.categories-section__item:hover img.usual-img {
  display:none;
}
a.categories-section__item:hover img.hover-img {
  display:unset;
}
a.categories-section__item img.usual-img {
  display:unset;
}
a.categories-section__item img.hover-img {
  display:none;
}

.footer {
  background-color: #0049bc;
  color: #fff;
  font-size: 1.2rem;
}


@media (min-width:1440px) {
  .header__logo {
    padding: 0 71px 0 0
  }

  .header__logo a {
    display: block
  }

  .header__logo img {
    vertical-align: bottom;
    width: 163px;
    height: 100%;
  }

  .footer {
    display: block;
  }

  .footer__wrapper {
    padding-bottom: 28px;
  }
}

@media (min-width:768px) {
  .header__logo img {
    vertical-align: top;
    width: 163px
  }

  .footer__wrapper {
    padding-top: 51px;
    padding-bottom: 36px;
  }
}

@media (min-width:1024px) {
  .footer__wrapper {
    padding-top: 45px;
    padding-bottom: 45px
  }
}

@media (min-width:1440px) {
  .footer__wrapper {
    padding-top: 43px;
    padding-bottom: 25px
  }
}

@media (max-width: 1440px) {
  .categories-section__item  {
    width: 25%;
  }
}

@media (max-width: 1128px) {
  .header__logo img {
    width: 163px;
  }
}

@media (max-width: 768px) {
  .categories-section {
    padding: 50px 0;
  }

  .categories-section__flex {
    margin-top: 0;
    flex-wrap: wrap;
  }

  .categories-section__item {
    margin: 40px 0 0;
    width: 50%;
    padding: 0 23px;
  }

  .categories-section__item p {
    padding-top: 20px;
    font-size: 16px;
    font-weight: bold;
    line-height: 1.25;
  }
}

@media (max-width: 360px) {
  .header__logo {
    padding-right: 12px;
  }
}

